# AMI-DOMAINS

./: .gitignore  .gitmodules  .pre-commit-config.unix.yaml  .pre-commit-config.yaml  CODE_QUALITY_ISSUES.md  CONFORMITY.md  FIXME.md  Makefile  REQUIREMENTS.md  SETUP_CONTRACT.md  default.env  module_setup.py  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  ruff.toml
keyring/: __init__.pyi
marketing/: .pre-commit-config.yaml  module_setup.py  pyproject.toml
marketing/research/ai-enablers/: README.md
marketing/research/ai-enablers/requirements-and-schemas/requirements/: initial-requirements.md
marketing/research/ai-enablers/requirements-and-schemas/schemas/: download.yaml  link.yaml
marketing/research/landscape/ai/: README.md  market-positioning-overview.md
marketing/research/landscape/ai/business-models/: index.md
marketing/research/landscape/ai/leads/: README.md
marketing/research/landscape/ai/leads/data/: agentic_automation.csv  edge_and_embedded.csv  enterprise_ai_suites.csv  foundation_model_providers.csv  functional_specialists.csv  hyperscalers.csv  vertical_industry_platforms.csv
marketing/research/landscape/ai/leads/logs/: 2025-09-27.md
marketing/research/landscape/ai/leads/requirements-and-schemas/requirements/: initial-requirements.md
marketing/research/landscape/ai/leads/requirements-and-schemas/schemas/: company.schema.json  company.yaml
marketing/research/landscape/ai/notes/: questions.md
marketing/research/landscape/ai/overview/: data-model.md  market-positioning-map.md  taxonomy.md
marketing/research/landscape/ai/segments/: agentic-automation.md  community-open-source.md  ecosystem-enablers.md  edge-and-embedded.md  enterprise-ai-suites.md  foundation-model-providers.md  functional-specialists.md  hyperscalers.md  vertical-industry-platforms.md
marketing/scripts/: ANTI-HALLUCINATION-SYSTEM.md  CLOUDSCRAPER-INFO.md  MECHANICAL-IMPLEMENTATION.md  RESEARCH-METHODOLOGY.md  SCRIPT-INPUT-OUTPUT-SPEC.md  VERIFICATION-CHECKS.md  __init__.py  add_audit_note.py  add_link.py  create_research.py  download_file.py  propose_schema.py  requirements.txt  research.sh  utils.py  validate_and_save.py
marketing/tests/: test_scripts.py
risk/: SPEC-RISK.md
sda/scripts/: setup-intel.sh
sda/sda/docs/: SOLUTION_DESIGN.md
